# pipmate

./: README  README.md  pyproject.toml  setup.py  setup_old.py
src/pipmate/: app.py  commands.py  parser.py
src/pipmate/parse/: parser.py  pipfile_decode.py  pipfile_parse.py  pyproject_decode.py  pyproject_parse.py  requirements_decode.py
tests/: mock-pyproject.toml  mock-requirements.txt
