[tool.poetry]
name = "pipmate"
version = "0.1.0"
description = "Easily shift between pipfiles, pyproject.toml and requirements.txt"
authors = ["Srujan Deshpande"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
cleo = "^0.8.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
twine = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
